  * debian/rules: target build: apply socklog-conf-update-service.diff.
  * debian/etc/klog/run: cut: fields and positions are numbered from 1,
    not 0.
  * debian/socklog-run.postinst, debian/socklog-run.prerm: use runit's
    update-service program to add/remove services from system-wide service
    supervision, instead of dealing with symlinks in /var/service/ directly.
  * debian/socklog-run.postinst: remove socklog-unix, socklog-klog services
    on upgrade from <= 2.1.0-7, re-add afterwards through update-service,
    and restore ./supervise/ symlinks for other enabled socklog services.

 -- Gerrit Pape <pape@smarden.org>  Thu, 14 Feb 2008 01:17:31 +0000

socklog (2.1.0-7) unstable; urgency=low

  * debian/diff/tryto-n.diff: new; don't report failure if the final try
    of prog succeeds (thx Andras Korn, closes: #401547).
  * debian/rules: apply tryto-n.diff.

 -- Gerrit Pape <pape@smarden.org>  Sat,  9 Dec 2006 10:34:40 +0000

socklog (2.1.0-6) unstable; urgency=medium

  * debian/socklog.postrm: check for deluser being available, if not,
    print warning and don't remove system user (closes: #398539).

 -- Gerrit Pape <pape@smarden.org>  Fri, 17 Nov 2006 20:09:56 +0000

socklog (2.1.0-5) unstable; urgency=low

  * debian/socklog.postinst: don't make the log service system user
    log member of group adm, but nogroup; log's home directory is
    /nonexistent (closes: #396687).
  * debian/socklog-run.postinst: make log directories mode 2750, owner
    log:adm.

 -- Gerrit Pape <pape@smarden.org>  Mon,  6 Nov 2006 20:27:25 +0000

socklog (2.1.0-4) unstable; urgency=low

  * debian/control: socklog-run: no longer Depends: ipsvd, as package
    socklog Recommends: ipsvd, and it's only necessary for optional
    tcp and/or ssl network logging.
  * debian/socklog-run.README.Debian: service directories are in /etc/sv/.
  * debian/control: Standards-Version: 3.7.2.0.
  * debian/implicit: update to revision 1.11.
  * debian/copyright: 2006.
